# AgentJim

./: LICENSE  README.md  app.py  gym_trainer.db  pyproject.toml  requirements.txt  server.py  testing.py
config/: settings.py
crew/: database_manager.py  manager.py
crew/agents/: assessment.py  nutriagent.py  workout_planner.py
db/: crud.py  database.py  models.py  test_db.py
src/: __init__.py
src/agents/: __init__.py  assessment.py  nutriagent.py  workout_planner.py
src/config/: __init__.py  settings.py
src/crew/: __init__.py  manager.py
src/crew/agents/: assessment.py  nutriagent.py  workout_planner.py
