[project]
name = "agentjim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.165.1",
    "crewai-tools>=0.62.3",
    "fastapi>=0.116.1",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.2.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
]
